--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9e7ee8">  <td>24/09/22 19:42:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowserSession()[pri:0, instance:automation.qaTest.RegisterTest@5c5eefef]">&lt;&lt;closeBrowserSession</td> 
+<tr bgcolor="fa6fa7">  <td>25/04/28 09:24:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:automation.qaTest.RegisterTestasProvider@36bc55de]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="9e7ee8">  <td>24/09/22 19:42:06</td>   <td>-16200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:automation.qaTest.RegisterTest@5c5eefef]">&gt;&gt;setup</td> 
+<tr bgcolor="fa6fa7">  <td>25/04/28 09:26:18</td>   <td>119326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBrowserSession()[pri:0, instance:automation.qaTest.RegisterTestasProvider@36bc55de]">&lt;&lt;closeBrowserSession</td> 
 <td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="9d6b9d">  <td>24/09/22 19:42:12</td>   <td>-10272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.verifyRegisterTest()[pri:0, instance:automation.qaTest.RegisterTest@5c5eefef]">verifyRegisterTest</td> 
+<tr bgcolor="93938a">  <td>25/04/28 09:24:24</td>   <td>5247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTestasProvider.verifyRegisterPageasProvider()[pri:0, instance:automation.qaTest.RegisterTestasProvider@36bc55de]">verifyRegisterPageasProvider</td> 
   <td>main@925858445</td>   <td></td> </tr>
 </table>
